# printer-supplies-api

./: .gitignore  Cargo.toml  README.md  compose.yaml  justfile  openapi.json  postman_endpoints.json  rustfmt.toml  sqlite.db
adapters/: Cargo.toml
adapters/src/http/: mod.rs
adapters/src/http/routes/: mod.rs
environments/: .env.development  .env.production  .env.test
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/infra/: Cargo.toml
libs/infra/src/database/migrations/: 0003_create_brand_table.sql  0004_create_printer_table.sql  0005_create_movement_table.sql
migrations/: 0001_create_toner_table.sql  0002_create_drum_table.sql  0003_create_brand_table.sql  0004_create_printer_table.sql  0005_create_movement_table.sql
scripts/: set_env.sh
src/: config.rs  logger.rs  main.rs  router.rs  server.rs
src/adapters/inbound/: Cargo.toml
src/adapters/inbound/src/http/: mod.rs  responses.rs
src/adapters/inbound/src/http/handlers/: create_toner.rs  delete_toner.rs  mod.rs
src/adapters/inbound/src/http/routes/: mod.rs  toner.rs
src/adapters/outbound/: Cargo.toml
src/adapters/outbound/src/: sqlite.rs
src/config/: Cargo.toml  environment.rs  logger.rs  mod.rs
src/config/src/: cors.rs  environment.rs  lib.rs  logger.rs
src/domain/: Cargo.toml
src/domain/src/stock/: ports.rs  service.rs
src/domain/src/stock/models/: mod.rs  toner.rs
src/errors/: api_error.rs  mod.rs
src/handlers/: brand.rs  drum.rs  migrations.rs  mod.rs  movement.rs  printer.rs  status.rs  toner.rs
src/handlers/supplies/: drum.rs  mod.rs  toner.rs
src/models/: brand.rs  drum.rs  mod.rs  movement.rs  printer.rs  status.rs  toner.rs
src/models/supplies/: drum.rs  toner.rs
src/openapi/: api_doc.rs  mod.rs  swagger.rs
src/routes/: brands.rs  migrations.rs  mod.rs  movements.rs  printers.rs  status.rs  swagger.rs
src/routes/supplies/: drums.rs  mod.rs  toners.rs
src/server/: mod.rs
src/validations/: existence.rs  mod.rs  uniqueness.rs  uuid.rs
tests/: endpoints.rs
