[package]
name = "printer-supplies-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = "0.12.7"
rust_decimal = { version = "1.36.0", features = ["serde", "serde-with-float"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.1", features = ["chrono", "postgres", "runtime-tokio-native-tls", "rust_decimal", "uuid"] }
thiserror = "1.0.65"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
utoipa = { version = "5.1.3", features = ["chrono", "decimal", "uuid"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
