[package]
name = "inbound"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../../domain" }
config = { path = "../../config" }

anyhow = "1.0.93"
axum = "0.7.7"
tokio = "1.41.1"
thiserror = "2.0.0"
serde = { version = "1.0.214", features = ["derive"] }
tracing = "0.1.40"
uuid = "1.11.0"
tower-http = { version = "0.6.1", features = ["trace"] }
